<resources>
    <string name="app_name">EX3AP2</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_logoText">Whatsapp</string>
    <string name="signup_username">Username</string>
    <string name="signup_nickname">Nickname</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_login">Already signed up? Login.</string>
    <string name="signup_button">Signup</string>
    <string name="login_signup">Dont have an account? Click here</string>
    <string name="signupLogin">Already signed up? Click here</string>
    <string name="add_contact_btnText">Add Contact</string>
    <string name="etNullField">ALL FIELDS MUST BE FILLED</string>
    <string name="etPasswordNotMatched">Password doesn\'t match</string>
    <string name="etPasswordPattern">Password must contain: number, upper&amp;lower digit, 6-20 length</string>
    <string name="etUsernameUsed">Username is already used</string>
    <string name="add_contact_username">Enter username...</string>
    <string name="add_contact_nickname">Enter nickname...</string>
    <string name="add_contact_server">Enter server...</string>
    <string name="BaseUrl">http://10.0.2.2:5016/api/</string>

</resources>